--- a/crud-php-prototipo-refactorizado-main/frontend/css/styles.css
+++ b/crud-php-prototipo-refactorizado-main/frontend/css/styles.css
@@ -16,3 +16,10 @@ form input, form button {
 #optional{
     margin-top: 9px;
 }
+
+aside{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between ;
+    align-items: center;
+}
